# vulkan_routine_march_22

./: Cargo.toml  README.md  compile__shaders.coffee
assets/: terrain__002__.mtl
shaders/: s1.frag  s1.vert  s_200__.vert  s_300_.vert  s_400_.vert
spv/: s1.frag.spv  s1.vert.spv  s_200__.vert.spv  s_300__.vert.spv  s_400_.vert.spv
src/: backup_2.rs  bug_report.rs  main.rs  pipeline_101.rs  pipeline_102.rs  precursors.rs  precursors__308.rs  record_cb_thread.rs  startup_vulkan.rs  vulkan_6300.rs  vulkan_6400.rs  vulkan_8300.rs  vulkan_8400.rs  vulkan_8500.rs  vulkan_8600.rs  vulkan_8700.rs
src/buffer_ops/: buffer_indices.rs  buffer_vertices.rs  create_buffer.rs  mod.rs  update_uniform_buffer.rs
src/command_buffers/: mod.rs  record_cb_218.rs  record_cb_219.rs
src/data_structures/: mod.rs  vertex_v3.rs
src/pipelines/: mod.rs  pipeline_101.rs
src/spatial_transforms/: camera.rs
src/threads/: cb_rec_218_thread_closure.rs  mod.rs
src/utilities/: load_model.rs  mesh_cull.rs  mod.rs
