[package]
name = "vulkan__march__22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1"
nalgebra-glm = "0.12"
winit     = "0.26.1"
num-complex = "0.4.0"
erupt = { path = "../erupt/erupt" }

structopt = "0.3"
bytemuck = "1.5"

cgmath    = "0.18.0"

libc = "0.2.119"

raw-window-handle = "0.3.3"
serde = "1.0.130"
mint = "0.5.6"
num       = "0.2"
image     = "0.22"
memoffset = "0.5.1"
tobj      = "3.2.0"
smallvec = "1.8.0"

simple_logger = "1.13.0"


[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["windef", "libloaderapi"] }
